--- a/.github/workflows/build-webgl.yml
+++ b/.github/workflows/build-webgl.yml
@@ -13,14 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Cache Library Folder
-        uses: actions/cache@v4
-        with:
-          path: Library
-          key: Library-WebGL-${{ github.sha }}
-          restore-keys: |
-            Library-WebGL-
-
       - name: Get Unity License
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -32,6 +24,10 @@ jobs:
 
       - name: Build WebGL
         uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           projectPath: .
           targetPlatform: WebGL
