--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -1,8 +1,7 @@
 name: Run Unity Tests
 
 on:
-  [push, pull_request]
-  workflow_dispatch:
+  [push, pull_request, workflow_dispatch]
 
 jobs:
   test:
