--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -19,9 +19,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          coverageOptions: generateAdditionalMetrics; generateHtmlReport; generateBadgeReport;
-          assemblyFilters:
-            Assembly-CSharp
+          coverageOptions: generateAdditionalMetrics; generateHtmlReport; generateBadgeReport; assemblyFilters:+Assembly-CSharp;
           
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
