--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -20,6 +20,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+Assembly-CSharp;
+          customParameters: '-nographics'
           
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
