--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -23,6 +23,7 @@ jobs:
         uses: game-ci/unity-test-runner@v4
         id: TestStep
         env:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
