--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -29,13 +29,8 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+Assembly-CSharp;
-          customParameters: '-nographics'
+          customParameters: -nographics
           
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results
-          path: ${{ steps.TestStep.outputs.artifactsPath }}
 
       - name: Upload Code Coverage Results
         uses: actions/upload-artifact@v4
