--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -28,7 +28,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+Assembly-CSharp;
+          coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;generateHtmlReportHistory;assemblyFilters:+Assembly-CSharp;
           
 
       - name: Upload Code Coverage Results
