--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -19,6 +19,14 @@ jobs:
           restore-keys: |
             Library-WebGL-
 
+      - name: Cache Test History Folder
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.TestStep.outputs.coveragePath }}/Report-history
+          key: History-Test-${{ github.sha }}
+          restore-keys: |
+            History-Test-
+
       - name: Run Unity Tests
         uses: game-ci/unity-test-runner@v4
         id: TestStep
@@ -35,5 +43,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Code Coverage Results
-          path: ${{ steps.TestStep.outputs.coveragePath }}
+          path: ${{ steps.TestStep.outputs.coveragePath }}/Report/index.html
           
