--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;generateHtmlReportHistory;assemblyFilters:+Assembly-CSharp;
+          testMode: standalone
           
 
       - name: Upload Code Coverage Results
