--- a/.github/workflows/run-unity-tests.yml
+++ b/.github/workflows/run-unity-tests.yml
@@ -19,14 +19,6 @@ jobs:
           restore-keys: |
             Library-WebGL-
 
-      - name: Cache Test History Folder
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.TestStep.outputs.coveragePath }}/Report-history
-          key: History-Test-${{ github.sha }}
-          restore-keys: |
-            History-Test-
-
       - name: Run Unity Tests
         uses: game-ci/unity-test-runner@v4
         id: TestStep
@@ -36,7 +28,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;generateHtmlReportHistory;assemblyFilters:+Assembly-CSharp;
+          coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+Assembly-CSharp;
           testMode: standalone
           
 
