--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          dotnet format --check --verbosity diagnostic 2>&1 | grep -E "error|warning" | while read line; do
+          dotnet-format --check --verbosity diagnostic 2>&1 | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\): ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
