--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,7 +20,7 @@ jobs:
             dotnet-format-
 
       - name: Install dotnet-format
-        if: steps.cache-dotnet-format.outputs.cache-hit == 'false'
+        if: steps.cache-dotnet-format.outputs.cache-hit == 'true'
         run: dotnet tool install -g dotnet-format
 
       - name: Run soft dotnet-format
