--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,8 +25,9 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          echo dotnet-format --include "**/*.cs" --check --verbosity diagnostic
-          dotnet format --include "**/*.cs" --check --verbosity diagnostic 2>&1 | grep -E "error|warning" | while read line; do
+          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1)
+          echo "$output"
+          echo "$output" | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\): ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
