--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -10,32 +10,23 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
 
-      - name: Cache dotnet-format
-        id: cache-dotnet-format
+      - name: Cache csharp-lint
+        id: cache-csharp-lint
         uses: actions/cache@v4
         with:
           path: ~/.dotnet/tools
-          key: dotnet-format-${{ github.sha }}  
+          key: csharp-lint-${{ github.sha }}  
           restore-keys: |
-            dotnet-format-
+            csharp-lint-
 
-      - name: Install dotnet-format
-        if: steps.cache-dotnet-format.outputs.cache-hit == 'true'
-        run: dotnet tool install -g dotnet-format
+      - name: Install csharp-lint
+        if: steps.cache-csharp-lint.outputs.cache-hit == 'true'
+        run: dotnet tool install -g csharp-lint
 
-      - name: Run soft dotnet-format
+      - name: Run parsing
         run: |
-          echo "::group::Running dotnet-format"
-          output=$(dotnet format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
-          echo "$output"
-          echo "::endgroup::"
-        
-          echo "$output" | grep -E "error|warning" | while read line; do
-            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\): ]]; then
-              file="${BASH_REMATCH[1]}"
-              line_num="${BASH_REMATCH[2]}"
-              echo "::warning file=$file,line=$line_num::$line"
-            else
-              echo "::warning::$line"
-            fi
-          done || true
+          csharp-lint "**/*.cs" | while read -r line; do
+          if [[ $line =~ ^(.*):([0-9]+):([0-9]+):\ (.*)$ ]]; then
+            echo "::warning file=${BASH_REMATCH[1]},line=${BASH_REMATCH[2]},col=${BASH_REMATCH[3]}::${BASH_REMATCH[4]}"
+          fi
+          done
