--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run soft dotnet-format
         run: |
           echo "::group::Running dotnet-format"
-          output=$(dotnet format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
+          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
           echo "$output"
           echo "::endgroup::"
         
