--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -29,7 +29,6 @@ jobs:
           cat << 'EOF' > Assembly-CSharp.csproj
           <Project Sdk="Microsoft.NET.Sdk">
             <PropertyGroup>
-              <TargetFramework>netstandard2.1</TargetFramework>
               <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
             </PropertyGroup>
             <ItemGroup>
@@ -40,16 +39,11 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          echo "::group::Running dotnet-format"
-          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
-          echo "$output"
-          echo "::endgroup::"
-        
-          echo "$output" | grep -E "error|warning" | while read line; do
+          echo dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\): ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
-              echo "::warning file=$file,line=$line_num::$line"
+              echo "::warning file=$file, line=$line_num::$line"
             else
               echo "::warning::$line"
             fi
