--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -29,6 +29,7 @@ jobs:
           cat << 'EOF' > Assembly-CSharp.csproj
           <Project Sdk="Microsoft.NET.Sdk">
             <PropertyGroup>
+              <TargetFramework>netstandard2.1</TargetFramework>
               <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
             </PropertyGroup>
             <ItemGroup>
