--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.dotnet/tools
-          key: dotnet-format-${{ github.sha }}  
+          key: dotnet-format 
           restore-keys: |
-            dotnet-format-
+            dotnet-format
             
       - name: Install dotnet-format
         if: steps.cache-dotnet-format.outputs.cache-hit == 'true'
@@ -39,13 +39,21 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
+          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1)
         
           echo "$output" | grep -E "error|warning" | while read line; do
-            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\): ]]; then
+            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):\s*(error|warning)\s*([A-Za-z0-9]+):\s*(.*) ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
-              echo "::warning file=$file, line=$line_num::$line"
+              type="${BASH_REMATCH[4]}"
+              code="${BASH_REMATCH[5]}"
+              message="${BASH_REMATCH[6]}"
+              echo "::$type file=$file,line=$line_num,code=$code::$message"
+            elif [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):\s*(.*) ]]; then
+              file="${BASH_REMATCH[1]}"
+              line_num="${BASH_REMATCH[2]}"
+              message="${BASH_REMATCH[4]}"
+              echo "::warning file=$file,line=$line_num::$message"
             else
               echo "::warning::$line"
             fi
