--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1)
+          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
         
           echo "$output" | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):\s*(error|warning)\s*([A-Za-z0-9]+):\s*(.*) ]]; then
