--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
+          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" | tr -d '\000-\031' || true)
         
           echo "$output" | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):\s*(error|warning)\s*([A-Za-z0-9]+):\s*(.*) ]]; then
@@ -57,4 +57,4 @@ jobs:
             else
               echo "::warning::$line"
             fi
-          done || true
+          done
