--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,7 +21,7 @@ jobs:
             dotnet-format
             
       - name: Install dotnet-format
-        if: steps.cache-dotnet-format.outputs.cache-hit == 'true'
+        if: steps.cache-dotnet-format.outputs.cache-hit != 'true'
         run: dotnet tool install -g dotnet-format
 
       - name: Create temporary project file
