--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,3 @@
-
 name: C# Linter
 on: [push, pull_request]
 
@@ -39,9 +38,11 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          output=$(dotnet-format --include "**/*.cs" --check --verbosity diagnostic 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" | tr -d '\000-\031' || true)
+          output=$(dotnet-format --no-restore --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
         
-          echo "$output" | grep -E "error|warning" | while read line; do
+          clean_output=$(echo "$output" | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" | sed 's/\r//g' | sed 's/\x0//g' | sed 's/[[:space:]]+/ /g' | tr -cd '\11\12\15\40-\176')
+
+          echo "$clean_output" | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):\s*(error|warning)\s*([A-Za-z0-9]+):\s*(.*) ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
