--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           output=$(dotnet-format --no-restore --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
         
-          clean_output=$(echo "$output" | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" | sed 's/\r//g' | sed 's/\x0//g' | sed 's/[[:space:]]+/ /g' | tr -cd '\11\12\15\40-\176')
+          clean_output=$(echo "$output" | iconv -c -t ASCII)
 
           echo "$clean_output" | grep -E "error|warning" | while read line; do
             if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):\s*(error|warning)\s*([A-Za-z0-9]+):\s*(.*) ]]; then
