--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -38,18 +38,23 @@ jobs:
 
       - name: Run soft dotnet-format
         run: |
-          dotnet-format --no-restore --include "**/*.cs" --check --verbosity diagnostic 2>&1 | tee raw_output.txt || true
+          raw_output=$(dotnet-format --no-restore --include "**/*.cs" --check --verbosity diagnostic 2>&1 | tee /dev/tty || true)
 
-          clean_output=$(cat raw_output.txt | perl -pe 's/\e\[[\d;]*[mGK]//g' | tr '\000-\011\013\014\016-\037' ' ' | tr -s ' ' | awk '{$1=$1};1')
-
+          clean_output=$(echo "$raw_output" | perl -pe 's/\e\[[\d;]*[mGK]//g' | tr -cd '\11\12\15\40-\176')
+      
           echo "$clean_output" | grep -E "error|warning" | while read -r line; do
-            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(error|warning)[[:space:]]*([A-Za-z0-9]+):[[:space:]]*(.*) ]]; then
+            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(error)[[:space:]]+([A-Za-z0-9]+):[[:space:]]*(.*) ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
-              type="${BASH_REMATCH[4]}"
               code="${BASH_REMATCH[5]}"
               message="${BASH_REMATCH[6]}"
-              echo "::$type file=$file,line=$line_num,code=$code::$message"
+              echo "::error file=$file,line=$line_num,code=$code::$message"
+            elif [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(warning)[[:space:]]+([A-Za-z0-9]+):[[:space:]]*(.*) ]]; then
+              file="${BASH_REMATCH[1]}"
+              line_num="${BASH_REMATCH[2]}"
+              code="${BASH_REMATCH[5]}"
+              message="${BASH_REMATCH[6]}"
+              echo "::warning file=$file,line=$line_num,code=$code::$message"
             elif [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(.*) ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
