--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -40,28 +40,27 @@ jobs:
         run: |
           raw_output=$(dotnet-format --no-restore --include "**/*.cs" --check --verbosity diagnostic 2>&1 || true)
 
-          clean_output=$(echo "$raw_output" | perl -pe 's/\e\[[\d;]*[mGK]//g' | tr -cd '\11\12\15\40-\176')
-      
-          clean_output=$(echo "$clean_output" | sed 's/[^[:print:][:space:]]//g')
+          clean_output=$(echo "$raw_output" | perl -pe 's/\e\[[\d;]*[mGK]//g' | tr -cd '\11\12\15\40-\176' | sed 's/[^[:print:][:space:]]//g')
       
           echo "$clean_output" | grep -E "error|warning" | while read -r line; do
-            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(error)[[:space:]]+([A-Za-z0-9]+):[[:space:]]*(.*) ]]; then
+            if [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(error|warning)[[:space:]]+([A-Za-z0-9]+):[[:space:]]*(.*) ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
+              column="${BASH_REMATCH[3]}"
+              type="${BASH_REMATCH[4]}"
               code="${BASH_REMATCH[5]}"
               message="${BASH_REMATCH[6]}"
-              echo "::error file=$file,line=$line_num,code=$code::$message"
-            elif [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(warning)[[:space:]]+([A-Za-z0-9]+):[[:space:]]*(.*) ]]; then
-              file="${BASH_REMATCH[1]}"
-              line_num="${BASH_REMATCH[2]}"
-              code="${BASH_REMATCH[5]}"
-              message="${BASH_REMATCH[6]}"
-              echo "::warning file=$file,line=$line_num,code=$code::$message"
+              
+              full_message="[${code}] ${message} (Line ${line_num}, Column ${column})"
+              echo "::$type file=$file,line=$line_num,col=$column,title=${code}::$full_message"
+              
             elif [[ $line =~ ([^\(]+)\(([0-9]+),([0-9]+)\):[[:space:]]*(.*) ]]; then
               file="${BASH_REMATCH[1]}"
               line_num="${BASH_REMATCH[2]}"
+              column="${BASH_REMATCH[3]}"
               message="${BASH_REMATCH[4]}"
-              echo "::warning file=$file,line=$line_num::$message"
+              
+              echo "::warning file=$file,line=$line_num,col=$column::$message"
             else
               echo "::warning::$line"
             fi
