--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: Library
-          key: Library-WebGL-${{ github.sha }}
+          key: Library-Unix-${{ github.sha }}
           restore-keys: |
-            Library-WebGL-
+            Library-Unix-
 
       - name: Build WebGL
         uses: game-ci/unity-builder@v4
@@ -74,3 +74,63 @@ jobs:
         with:
           name: Windows-${{ matrix.platform }}-Build
           path: build/${{ matrix.platform }}
+          
+  build-linux:
+    name: Build Linux
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Cache Library Folder
+        uses: actions/cache@v4
+        with:
+          path: Library
+          key: Library-Unix-${{ github.sha }}
+          restore-keys: |
+            Library-Unix-
+
+      - name: Build Linux
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          targetPlatform: StandaloneLinux64
+
+      - name: Upload Linux Build
+        uses: actions/upload-artifact@v4
+        with:
+          name: Linux-Build
+          path: build/StandaloneLinux64
+
+  build-macos:
+    name: Build MacOS
+    runs-on: macos-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Cache Library Folder
+        uses: actions/cache@v4
+        with:
+          path: Library
+          key: Library-Unix-${{ github.sha }}
+          restore-keys: |
+            Library-Unix-
+
+      - name: Build MacOS
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          targetPlatform: StandaloneOSX
+
+      - name: Upload MacOS Build
+        uses: actions/upload-artifact@v4
+        with:
+          name: MacOS-Build
+          path: build/StandaloneOSX
